k8s/gx-compliance-server-2206-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-compliance-2206-main
  namespace: gx-lab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gx-compliance-2206-main
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gx-compliance-2206-main
    spec:
      containers:
      - env:
        - name: jws_wrong
          valueFrom:
            secretKeyRef:
              key: JWS_WRONG
              name: gx-compliance-secrets
        - name: spki
          valueFrom:
            secretKeyRef:
              key: SPKI
              name: gx-compliance-secrets
        - name: privateKey
          valueFrom:
            secretKeyRef:
              key: tls.key
              name: gx-compliance-secrets
        - name: X509_CERT
          valueFrom:
            secretKeyRef:
              key: tls.crt
              name: gx-compliance-secrets
        - name: REGISTRY_URL
          value: http://20.76.5.229
        - name: BASE_URL
          value: https://sphereon-test.ddns.net
        - name: SD_STORAGE_BASE_URL
          value: http://20.4.152.212
        - name: SD_STORAGE_API_KEY
          value: test123
        image: vdxcontainerregistry2022051200.azurecr.io/gx-compliance:v2.0.0
        imagePullPolicy: Always
        name: gx-compliance-2206-main
        ports:
        - containerPort: 3000
          name: http-api
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
