k8s/gx-compliance-server-2206-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gx-compliance-live-server-2206
  namespace: gx-lab
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-api
  selector:
    app: gx-compliance-live-server-2206-main
  sessionAffinity: None
  type: LoadBalancer
