k8s/gx-compliance-server-2210VP-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gx-compliance-2206-main
  namespace: gx-lab
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http-api
    - name: https
      port: 443
      protocol: TCP
      targetPort: http-api
  selector:
    app: gx-compliance-2206-main
  type: ClusterIP
