k8s/development-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-registration-server-development
  namespace: gx-lab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gx-registration-server-development
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gx-registration-server-development
    spec:
      containers:
      - env:
        - name: European_Commission_API
          value: https://ec.europa.eu/taxation_customs/dds2/eos/validation/services/validation
        - name: GLEIF_API
          value: https://api.gleif.org/api/v1/lei-records/
        - name: VAT_API
          value: http://ec.europa.eu/taxation_customs/vies/services/checkVatService
        - name: OpenCorporate_API
          value: https://api.opencorporates.com/
        - name: xmlns_eori
          value: http://eori.ws.eos.dds.s/
        - name: xmlns_urn
          value: urn:ec.europa.eu:taxud:vies:services:checkVat:types
        image: registry.gitlab.com/gaia-x/lab/compliance/gaia-x-notary-registrationnumber:development
        imagePullPolicy: Always
        name: gx-registration-server-development
        ports:
        - containerPort: 3000
          name: http-api
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: gx-registration-server-development
  namespace: gx-lab
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http-api
  selector:
    app: gx-registration-server-development
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: gx-registration-server
  namespace: gx-lab
spec:
  rules:
  - host: registration.lab.gaia-x.eu
    http:
      paths:
      - backend:
          service:
            name: gx-registration-server-development
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - registration.lab.gaia-x.eu
    secretName: gx-registration-server-tls-secret
