k8s/gx-compliance-server-2210VP-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gx-compliance-2206-main
  namespace: gx-lab
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: sphereon-test.ddns.net
      http:
        paths:
          - backend:
              service:
                name: gx-compliance-2206-main
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sphereon-test.ddns.net
      secretName: gx-compliance-secrets
status:
  loadBalancer:
    ingress:
      - ip: 20.93.222.76
