k8s/gx-compliance-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: gx-compliance-server
  namespace: gx-lab
spec:
  rules:
    - host: compliance.lab.gaia-x.eu
      http:
        paths:
          - backend:
              service:
                name: gx-compliance-server
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: gx-compliance-server-2204-development
                port:
                  number: 80
            path: /v2204/
            pathType: Prefix
          - backend:
              service:
                name: gx-compliance-server-2206-development
                port:
                  number: 80
            path: /v2206/
            pathType: Prefix
  tls:
    - hosts:
        - compliance.lab.gaia-x.eu
      secretName: gx-compliance-server-tls-secret
