k8s/live.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-compliance-live-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gx-compliance-live-server
  template:
    metadata:
      labels:
        app: gx-compliance-live-server
    spec:
      containers:
        - env:
            - name: jws_wrong
              valueFrom:
                secretKeyRef:
                  name: gx-compliance-secrets
                  key: JWS_WRONG
            - name: spki
              valueFrom:
                secretKeyRef:
                  name: gx-compliance-secrets
                  key: SPKI
            - name: privateKey
              valueFrom:
                secretKeyRef:
                  name: gx-compliance-secrets
                  key: PRIVATE_KEY
            - name: REGISTRY_URL
              value: http://20.71.17.107
            - name: BASE_URL
              value: http://20.23.55.213
          image: maasmai/gx-compliance:v1.0.3
          name: gx-compliance-live-server
          ports:
            - containerPort: 3000
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: gx-compliance-live-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: gx-compliance-live-server
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gx-compliance-live-server
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gx-compliance-live-server
                port:
                  number: 80
